@@ -818,7 +818,7 @@ def mayAreaHarm(player, char, excludeself = True, includeinnocents = False):
 		return False
 		
 	# Invulnerable, Invisible and Hidden creatures aren't affected
-	if char.invulnerable or not player.cansee(char):
+	if char.dead or char.invulnerable or not player.cansee(char):
 		return False
 		
 	# If we're allied with the given character, Return right away
