@@ -217,6 +217,18 @@ void DragAndDrop::grabItem( cUOSocket* socket, cUORxDragItem* packet )
 	{
 		socket->sendStatWindow();
 	}
+
+	// If the logmask contains LOG_TRACE,
+	// Log pickups
+	if (outmostCont && outmostCont != pItem) {
+		if (outmostCont->corpse()) {
+			cCorpse *corpse = static_cast<cCorpse*>(outmostCont);
+			P_PLAYER owner = dynamic_cast<P_PLAYER>(corpse->owner());
+			if (owner && owner != pChar) {
+				pChar->log(LOG_TRACE, tr("Picking up item '%1' (0x%2, %3) from corpse of player '%4' ('%5', 0x%6)\n").arg(pItem->baseid()).arg(pItem->serial(), 0, 16).arg(pItem->amount()).arg( owner->name() ).arg( owner->account() ? owner->account()->login() : QString( "unknown" ) ).arg( owner->serial(), 0, 16 ));
+			}
+		}
+	}
 }
 
 // Tries to equip an item
@@ -758,6 +770,17 @@ void DragAndDrop::dropOnItem( cUOSocket* socket, P_ITEM pItem, P_ITEM pCont, con
 		// Dropped on another Container/in another Container
 		pChar->soundEffect( 0x57 );
 		pItem->update();
+
+		// If the logmask contains LOG_TRACE, log drops
+		if (outmostCont && outmostCont != pItem) {
+			if (outmostCont->corpse()) {
+				cCorpse *corpse = static_cast<cCorpse*>(outmostCont);
+				P_PLAYER owner = dynamic_cast<P_PLAYER>(corpse->owner());
+				if (owner && owner != pChar) {
+					pChar->log(LOG_TRACE, tr("Dropping item '%1' (0x%2, %3) onto corpse of player '%4' ('%5', 0x%6)\n").arg(pItem->baseid()).arg(pItem->serial(), 0, 16).arg(pItem->amount()).arg( owner->name() ).arg( owner->account() ? owner->account()->login() : QString( "unknown" ) ).arg( owner->serial(), 0, 16 ));
+				}
+			}
+		}
 		return;
 	}
 	else if ( pCont->canStack( pItem ) )
@@ -795,6 +818,17 @@ void DragAndDrop::dropOnItem( cUOSocket* socket, P_ITEM pItem, P_ITEM pCont, con
 		{
 			pNewCont->addItem( pItem, false );
 			pItem->moveTo( pCont->pos() + Coord( 0, 0, 2 ) );
+
+			// If the logmask contains LOG_TRACE, log drops
+			if (outmostCont && outmostCont != pItem) {
+				if (outmostCont->corpse()) {
+					cCorpse *corpse = static_cast<cCorpse*>(outmostCont);
+					P_PLAYER owner = dynamic_cast<P_PLAYER>(corpse->owner());
+					if (owner && owner != pChar) {
+						pChar->log(LOG_TRACE, tr("Dropping item '%1' (0x%2, %3) onto corpse of player '%4' ('%5', 0x%6)\n").arg(pItem->baseid()).arg(pItem->serial(), 0, 16).arg(pItem->amount()).arg( owner->name() ).arg( owner->account() ? owner->account()->login() : QString( "unknown" ) ).arg( owner->serial(), 0, 16 ));
+					}
+				}
+			}
 		}
 		else
 		{
